# dials_accelerated_dispersion

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/Modules/: FindDials.cmake  FindISPC.cmake
dials_accelerated_dispersion/: dispersion.ispc
src/dials_accelerated_dispersion/: __init__.py  dispersion.ispc  ext.cxx
